<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/searchByProductName"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/forText"
            android:textColorHint="#757575" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sortByCountOrPrice"
            android:textColor="@color/forText"
            android:layout_margin="5dp"/>

        <Spinner
            android:id="@+id/sortingCountOrColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clearButton" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addButton" />

        <ListView
            android:id="@+id/listProduct"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="@color/forText"
            android:layout_weight="1">

        </ListView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>