<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <TableLayout
            android:id="@+id/tablelayout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TableRow
                android:id="@+id/tableRow"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:scaleType = "fitXY"
                    app:srcCompat="@drawable/ic_launcher_foreground"
                    tools:layout_editor_absoluteX="138dp"
                    tools:layout_editor_absoluteY="109dp" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/showNameProduct"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/nameProduct"
                        android:textColor="@color/forText"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />
                    <TextView
                        android:id="@+id/showTypeProduct"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/typeProduct"
                        android:textColor="@color/forText"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/showCountProduct"
                        app:layout_constraintStart_toEndOf="@+id/showNameProduct"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                    <TextView
                        android:id="@+id/showCountProduct"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/countProduct"
                        android:textColor="@color/forText"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/showTypeProduct"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                    <TextView
                        android:id="@+id/showPriceProduct"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/priceProduct"
                        android:textColor="@color/forText"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/showTypeProduct"
                        app:layout_constraintTop_toTopOf="parent"
                        />
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>